--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ body, html {
     margin: 0px;
 }
 
-.dark-mode {
+.sans {
     color: #000000;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
